--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -1,1 +1,16 @@
-<p>contact-list works!</p>
+<mat-toolbar color="primary">
+    <h1>Contatos</h1>
+</mat-toolbar>
+
+<mat-nav-list>
+    <mat-list-item>
+        <a matLine href="...">Contato1</a>
+        <button mat-icon-button>
+            <mat-icon>delete</mat-icon>
+        </button>
+    </mat-list-item>
+</mat-nav-list>
+
+<button routerLink="/contacts/create" class="btnCreate" mat-fab color="primary" aria-label="Novo Contato">
+    <mat-icon>add</mat-icon>
+</button>
