--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -3,8 +3,8 @@
 </mat-toolbar>
 
 <mat-nav-list>
-    <mat-list-item>
-        <a matLine href="...">Contato1</a>
+    <mat-list-item *ngFor="let contact of contacts">
+        <a matLine [routerLink]="['/contact', contact.id]">{{contact.name}}</a>
         <button mat-icon-button>
             <mat-icon>delete</mat-icon>
         </button>
