--- a/src/app/contact-create/contact-create.component.html
+++ b/src/app/contact-create/contact-create.component.html
@@ -2,18 +2,18 @@
     <h1>Novo Contato</h1>
 </mat-toolbar>
 
-<form>
+<form [formGroup]="contactForm" class="form" (ngSubmit)="createContact()">
     <mat-form-field appearance="fill">
         <mat-label>Nome</mat-label>
-        <input matInput>
+        <input matInput formControlName="name">
     </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Telefone</mat-label>
-        <input matInput>
+        <input matInput formControlName="phone">
     </mat-form-field>
 
     <div class="form-buttons">
-        <a routerLink="/contacts" mat-raised-button>Voltar</a>
-        <button mat-raised-button color="primary" type="submit">Criar</button>
+        <a routerLink="/contacts" mat-raised-button>Cancelar</a>
+        <button mat-raised-button color="primary" type="submit" [disabled]="contactForm.invalid">Criar</button>
     </div>
 </form>
