--- a/src/app/contact-update/contact-update.component.html
+++ b/src/app/contact-update/contact-update.component.html
@@ -1,19 +1,20 @@
 <mat-toolbar color="primary">
-    <h1>Editar Contato</h1>
+    <h1>Editar Contato #{{id}}</h1>
 </mat-toolbar>
 
-<form>
+<form [formGroup]="contactForm" class="form" (ngSubmit)="updateContact()">
     <mat-form-field appearance="fill">
         <mat-label>Nome</mat-label>
-        <input matInput>
+        <input matInput formControlName="name">
     </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Telefone</mat-label>
-        <input matInput>
+        <input matInput formControlName="phone">
     </mat-form-field>
 
     <div class="form-buttons">
-        <a routerLink="/contacts" mat-raised-button>Voltar</a>
-        <button mat-raised-button color="primary" type="submit">Atualizar</button>
+        <a routerLink="/contacts" mat-raised-button>Voltar para lista</a>
+        <button mat-raised-button color="primary" type="submit"
+            [disabled]="!contactForm.dirty || contactForm.invalid">Atualizar</button>
     </div>
 </form>
